[package]
name = "pdxscript-lsp"
version = "0.1.0"
edition = "2024"
description = "LSP server for Paradox script files using tiger-lib"
license = "GPL-3.0-or-later"
rust-version = "1.88"

[[bin]]
name = "pdxscript-lsp-vic3"
path = "src/main.rs"
required-features = ["vic3"]

[[bin]]
name = "pdxscript-lsp-ck3"
path = "src/main.rs"
required-features = ["ck3"]

[[bin]]
name = "pdxscript-lsp-imperator"
path = "src/main.rs"
required-features = ["imperator"]

[[bin]]
name = "pdxscript-lsp-hoi4"
path = "src/main.rs"
required-features = ["hoi4"]

[[bin]]
name = "pdxscript-lsp-eu5"
path = "src/main.rs"
required-features = ["eu5"]

[features]
vic3       = ["tiger-lib/vic3"]
ck3        = ["tiger-lib/ck3"]
imperator  = ["tiger-lib/imperator"]
hoi4       = ["tiger-lib/hoi4"]
eu5        = ["tiger-lib/eu5"]

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2"
steamlocate = "2.0"
home = "0.5"

tiger-lib = { path = "../tiger", version = "1.17.0", default-features = false }
